@@ -472,10 +472,9 @@ function TWebBrwSearch( cUrl, aHeaders, fCallback, cSearch, cTitle ) {
 	
 	this._PostSearch = function( dat ) {
 
-		oBrw.Loading( false )	
+		oBrw.Loading( false )		
 		oBrw.SetData( dat.rows )
-		console.log( dat.rows.length )
-		$('#_total').html( dat.rows.length )
+		$('#_total').html( dat.rows.length )		
 	}									
 	
 	
